# pyquizhub

./: .buildinfo  .dockerignore  .env.example  .env.test  .gitignore  ADMIN_FIXES_NOV13.md  ADMIN_WEB_DEPLOYMENT.md  ADMIN_WEB_FIXES.md  ADMIN_WEB_IMPLEMENTATION.md  ATTACHMENT_FORMAT_FIELD.md  CHANGELOG.md  CODE_ISSUES.md  CONTRIBUTING.md  Dockerfile  Dockerfile.colorapi  FILE_URL_VERIFICATION.md  IMPLEMENTATION_PLAN.md  README.md  SECURITY_ANALYSIS.md  SSRF_SECURITY_ARCHITECTURE.md  TESTING.md  architecture.html  config_utils.py  deployment.html  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  file_url_verification_results.json  genindex.html  getting_started.html  index.html  migrate_add_api_data.py  objects.inv  py-modindex.html  pyproject.toml  pyquizhub.db  quiz_format.html  quiz_tokens.json  search.html  searchindex.js  (+5 more)
.doctrees/: architecture.doctree  deployment.doctree  environment.pickle  getting_started.doctree  index.doctree  quiz_format.doctree
_modules/: index.html
_sources/: deployment.rst.txt  getting_started.rst.txt  index.rst.txt  quiz_format.rst.txt
adapters/: index.html
admin_web/: .dockerignore  Dockerfile  QUICK_START.md  README.md  app.py  test_admin.sh
core/: engine.html  index.html  storage.html
creator_web/: Dockerfile  app.py
docs/: DISCORD_INTEGRATION.md  EXCEPTION_HANDLING_REVIEW.md  FILE_ATTACHMENT_DESIGN.md  FILE_CLEANUP_SCHEDULER.md  FILE_SYSTEM_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  SECURITY_REDESIGN.md  VARIABLE_SYSTEM_EXAMPLE.md  api_integration.md  architecture.rst  cli_bug_fixes.md  conf.py  configuration.md  quiz_format.rst  quiz_json_format_guide.md  text_file_analysis.md  use_case_complex_quiz.md
pyquizhub/: engine.py  json_validator.py  main.py  models.py  safe_evaluator.py  setup.py  utils.py
quizzes/: color_detector_quiz.json  image_quiz.json  image_quiz_api.json  image_quiz_fixed.json  image_quiz_variable.json  python_knowledge_quiz.json  text_analysis_quiz.json
scripts/: color_api.py  dev_init.py  find_replacement_urls.py  manual_test_python_quiz.py  test_python_quiz.py  upload_quizzes.py  upload_quizzes.sh  verify_file_urls.py
tests/: conftest.py  test_admin_api.py  test_admin_web_adapters.py  test_api_integration.py  test_api_variable_security.py  test_auto_constraints.py  test_color_api.py  test_complex_quiz_flow.py  test_config.py  test_discord_adapter.py  test_engine.py  test_engine_api.py  test_file_attachment_system.py  test_file_cleanup_scheduler.py  test_final_message.py  test_image_content_verification.py  test_image_permissions.py  test_image_url_pattern_restrictions.py  test_image_url_redirect_protection.py  test_image_url_templating.py  (+17 more)
(+199 files in other folders)
