[tool.poetry]
name = "pyquizhub"
version = "0.1.0"
description = ""
authors = ["ivan <imtambovtcev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
pyyaml = "^6.0.2"
pytest = "^8.3.4"
requests = "^2.32.3"
httpx = "^0.28.1"
jinja2 = "^3.1.5"
python-multipart = "^0.0.20"
flask = "^3.1.0"
flask-cors = "^5.0.0"
pydantic-settings = "^2.0.0"
psycopg2-binary = "^2.9.11"

[tool.poetry.scripts]
pyquizhub-setup = "pyquizhub.config.initialize:initialize_system"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^3.0.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"